# Transunformers

./: .gitignore  README.md  pyproject.toml
schemas/: model_v1.json
src/transunformers/: catalog.py  chunking.py  cli.py  hf_compat.py  index.py  inputs.py  introspect.py  parser.py  trace.py  utils.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  wrangler.toml
web/scripts/: sync-data.mjs
web/src/: App.tsx  env.d.ts  index.css  main.tsx  router.tsx
web/src/app/: providers.tsx
web/src/context/: ThemeContext.tsx
web/src/data/: client.ts  compression.ts  config.ts  queries.ts  types.ts
web/src/features/explorer/: ModelSidebar.tsx  modelFilters.ts  store.ts
web/src/features/flow/: FlowWorkspace.tsx  flow-builder.ts  flow-normalize.ts  flow-types.ts
web/src/features/graph/: FlowEdge.tsx  GroupNode.tsx  ModelWorkspace.tsx  ModuleNode.tsx  elk-layout.ts  graph-builder.ts  modelInsights.ts  selection.ts  tree.ts  types.ts  visuals.ts
web/src/features/inspector/: NodeInspector.tsx
web/src/features/layers/: LayersPage.tsx  utils.ts
web/src/features/overview/: OverviewCharts.tsx  OverviewPage.tsx
web/src/features/settings/: SettingsPage.tsx
web/src/features/utils/: format.ts
web/src/i18n/: index.ts
web/src/pages/: Home.tsx
web/tests/: app.spec.ts  aria.spec.ts  config.spec.ts  deepseek.spec.ts  flow-mode.test.ts  flow.spec.ts  glm4-moe.spec.ts  graph-expansion.test.ts  graph-harness.ts  graph-insights.test.ts  graph.spec.ts  layout-samples.spec.ts  model-data-client.test.ts
(+2 files in other folders)
