[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transunformers"
version = "0.1.0"
description = "Parse and export Transformer model structure data for web visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.26",
  "huggingface_hub>=0.22",
  "torch>=2.1",
  "transformers>=4.40",
]

[project.scripts]
transunformers = "transunformers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
